# checkthat-2025-numerical

./: README.md  environment-mac.yml  metrics.py  pyproject.toml  requirements.txt  run_claimdecomp.py  run_eda-claims.py  run_generate_configs.py  run_information_retrieval.py  run_nli.py
baselines/English/: eval_veracity_prediction.py
config/eda/: run_config_all-MiniLM-L6-v2_pacmap.yml
config/encoder_classifier/: local_debug.yml  local_our_data_deberta.yml  local_our_data_long_context.yml  local_our_data_long_context_focal.yml  local_roberta-base_our_data.yml  local_venktesh_original_data.yml  local_venktesh_our_data.yml  local_venktesh_our_data_R2L.yml  pace_debug.yml  pace_modernbert_our_data.yml  pace_org_data_deberta.yml  pace_org_data_long_context.yml  pace_our_data_long_context.yml  pace_our_data_long_context_peft.yml  pace_our_data_long_context_peft_refined.yml  pace_venktesh_org_data.yml  pace_venktesh_our_data.yml
config/reranker/: retrieval_reranking.yml  run_config_reranker_local.yml  run_config_reranker_pace_llm.yml  run_config_reranker_pace_mixedbread.yml  run_config_reranker_test_local.yml  run_config_reranker_test_pace.yml
doc/: pipeline-draft-Alex.drawio
numerical/helper/: data_manipulation.py  data_store.py  inference.py  label.py  logger.py  run_config.py  tracking.py  train.py
numerical/models/: encoder_classifier.py  reranker.py
numerical/prompts/: claimdecomp_prompt.json
users/alex/: Alex-Attempt-ModernBERT-Fine-Tuning-NLI.ipynb  Alex-test_roberta-base_training_quantemp.ipynb  ClaimDecomp.ipynb  slurm-information-retrieval.sbatch  (+1 more)
(+20 files in other folders)
